# SPDX-FileCopyrightText: 2025 Dhruvin Gandhi <contact@dhru.vin>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "viola"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"
description = "!vaporware"
documentation = "https://docs.rs/viola"
repository = "https://github.com/d5ng4i/viola"
license = "MIT OR Apache-2.0"
categories = [
    "asynchronous",
    "filesystem",
    "network-programming",
    "os::linux-apis",
    "os::windows-apis"
]
include = ["/LICENSES/", "/src/"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu"
]
